Criação e Teste das funções base do Jogo

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
         <div class="telaMinerios">
             <div class="minerio">
                 <img src="imagens/imagemTeste.png" alt="">
+                <p>VIDA: 
+                <span id="minerioVida">
+                    <span id="minerioVidaAtual">5</span>/
+                    <span id="minerioVidaTotal">5</span>
+                </span>
+                </p>
+            </div>
+            <div id="botaoMinerar">
+                <button id="minerar" onclick="minerar()">MINERAR</button>
             </div>
         </div>
     </div>
