--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div id="telaJogo">
         <div class="telaMinerios">
             <div class="minerio">
-                <img src="imagens/imagemTeste.png" alt="">
+                <img src="imagens/imagemTeste.png" alt="" id="imagemMinerio">
+                <p><span id="minerioNome">FERRO</span></p>
                 <p>VIDA: 
                 <span id="minerioVida">
                     <span id="minerioVidaAtual">5</span>/
@@ -19,10 +20,10 @@
                 </p>
             </div>
             <div id="botaoMinerar">
-                <button id="minerar" onclick="minerar()">MINERAR</button>
+                <button id="btnMinerar">MINERAR</button>
             </div>
         </div>
     </div>
-    <script src="scripts.js"></script>
+    <script type= "module" src="scripts/main.js"></script>
 </body>
 </html>
