Troca de Imagem conforme o minério

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="telaJogo">
         <div class="telaMinerios">
             <div class="minerio">
-                <img src="imagens/imagemTeste.png" alt="" id="imagemMinerio">
+                <img scr="" alt="" id="imagemMinerio">
                 <p><span id="minerioNome">FERRO</span></p>
                 <p>VIDA: 
                 <span id="minerioVida">
