Adição da funcionalidade de dinheiro apos quebrar o minerio

--- a/index.html
+++ b/index.html
@@ -7,15 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <p>DINHEIRO: 
+            <span id="dinheiro"></span>
+        </p>
+    </header>
     <div id="telaJogo">
         <div class="telaMinerios">
             <div class="minerio">
                 <img scr="" alt="" id="imagemMinerio">
-                <p><span id="minerioNome">FERRO</span></p>
+                <p><span id="minerioNome"></span></p>
                 <p>VIDA: 
                 <span id="minerioVida">
-                    <span id="minerioVidaAtual">5</span>/
-                    <span id="minerioVidaTotal">5</span>
+                    <span id="minerioVidaAtual"></span>/
+                    <span id="minerioVidaTotal"></span>
                 </span>
                 </p>
             </div>
