Funcionalidade de salvar dados Localmente

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <p>DINHEIRO: 
             <span id="dinheiro"></span>
         </p>
+        <p id="dps">DPS:
+            <span id="dpsValor"></span>
+        </p>
     </header>
     <div id="telaJogo">
         <div class="telaMinerios">
