Adição de DPS ao Jogo

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <p>DINHEIRO: 
-            <span id="dinheiro"></span>
+        <p id="dinheiro">DINHEIRO: 
+            <span id="dinheiroValor"></span>
         </p>
         <p id="dps">DPS:
             <span id="dpsValor"></span>
