--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         </p>
     </header>
     <div id="telaJogo">
+        <div class="upgrades">
+            <p>TESTE DOS UPGRADES</p>
+        </div>
         <div class="telaMinerios">
             <div class="minerio">
                 <img scr="" alt="" id="imagemMinerio">
@@ -30,6 +33,9 @@
             <div id="botaoMinerar">
                 <button id="btnMinerar">MINERAR</button>
             </div>
+        </div>
+        <div class="ajudantes">
+            <p>TESTE DOS AJUDANTES</p>
         </div>
     </div>
     <script type= "module" src="scripts/main.js"></script>
